--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ excerpt: HI-ARC | Hong-Ik Algorithm Research Club
 
 {% include navigation.html %}
 
-<header class="masthead text-center text-white d-flex">
+<header class="masthead text-center text-white d-flex" id="page-top">
     <div class="container my-auto">
         <div class="row">
             <div class="col-lg-10 mx-auto">
