remove promotial video

--- a/intro.html
+++ b/intro.html
@@ -8,12 +8,12 @@ excerpt: HI-ARC | Hong-Ik Algorithm Research Club
 	<p>
 		HI-ARC는 Hong-Ik Algorithm Research Club의 약자로, 2017년 창설된 컴퓨터공학과 학회입니다.
 	</p>
-	<div class="video-banner">
+	<!-- <div class="video-banner">
 		<video controls>
-			<source src="movie.mp4" type="video/mp4">
+			<source src="promotional.mp4" type="video/mp4">
 			Your browser does not support the video tag.
 		</video>
-	</div>
+	</div> -->
 </section>
 
 <section>
