--- a/intro.html
+++ b/intro.html
@@ -3,7 +3,13 @@ layout: history
 title: "HI-ARC History"
 excerpt: HI-ARC | Hong-Ik Algorithm Research Club
 ---
-<section>
+<nav class="fixed-top">
+	<div class="navbar-container">
+		<a class="navbar-brand" href="/#page-top">{{site.title}}</a>
+	</div>
+</nav>
+
+<header>
 	<h1>소개</h1>
 	<p>
 		HI-ARC는 Hong-Ik Algorithm Research Club의 약자로, 2017년 창설된 컴퓨터공학과 학회입니다.
@@ -14,7 +20,7 @@ excerpt: HI-ARC | Hong-Ik Algorithm Research Club
 			Your browser does not support the video tag.
 		</video>
 	</div> -->
-</section>
+</header>
 
 <section>
 	<h1>활동 기록</h1>
