--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 ---
-layout: homepage
+redirect: https://hi-arc.org
+layout: redirect
 title: "HI-ARC"
 excerpt: HI-ARC | Hong-Ik Algorithm Research Club
 ---
